<resources>
    <string name="app_name">android_finals</string>

    <!-- Corrected as string-array -->
    <string-array name="main_page_categories">
        <item>New collection</item>
        <item>Dresses</item>
        <item>Best sellers</item>
        <item>New arrivals</item>
        <item>Matching sets</item>
        <item>Jewellery</item>
    </string-array>

    <string-array name="catalog_categories">
        <item>Women collection</item>
        <item>Men collection</item>
        <item>Jewellery</item>
    </string-array>

    <string-array name="men_categories">
        <item>Shirts</item>
    </string-array>

    <string name="new_collection"><u>New Collection</u></string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="best_sellers">Best Sellers</string>
    <string name="jewellery">Jewellery</string>
    <string name="matching_sets">Matching Sets</string>
    <string name="dresses">Dresses</string>
    <string name="_99_us">99 US$</string>

<!--    For Navigation-->
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="favorites">Favorites</string>
    <string name="catalogue">Catalogue</string>
    <string name="home">Home</string>
    <string name="women_s_clothing">Women\'s clothing</string>
    <string name="men_s_clothing">Men\'s clothing</string>
    <string name="jewelery">Jewelery</string>
</resources>
